testData/psi/parser/ill-formed/struct_pat.rs
struct S {
    f: f64
}

fn main() {
    let S {mut f : f} = S { f: 92.0 };
}
